--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Your Title
+title: The Tech Cave
 description: > # this means to ignore newlines until "baseurl:"
-  Your description
+  A massive database of information about IT for those who need it.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "Your-Link.github.io" # the base hostname & protocol for your site
+url: "thetechcave.github.io" #"Your-Link.github.io" # the base hostname & protocol for your site
 # Build settings
 markdown: kramdown
 
@@ -11,9 +11,9 @@ facebook:
 
 logo: "../css/2016_style/img/icon-large.png"
 
-social: 
-  name: Your Facebook Page
-  link: "https://www.facebook.com/"
+#social: 
+#  name: Your Facebook Page
+#  link: "https://www.facebook.com/"
 
 google_site_verification: googleXXXXXXXXXXXXXXXX.html
 
@@ -24,11 +24,11 @@ plugins:
   - jekyll-seo-tag
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
-social:
-  - title: facebook
-    url: https://www.facebook.com
-  - title: twitter
-    url: https://twitter.com
+#social:
+#  - title: facebook
+#    url: https://www.facebook.com
+#  - title: twitter
+#    url: https://twitter.com
 
 # Build settings
 markdown: kramdown
