--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ url: "thetechcave.github.io" #"Your-Link.github.io" # the base hostname & protoc
 # Build settings
 markdown: kramdown
 
-facebook:
-  app_id: 
+#facebook:
+#  app_id: 
 
 logo: "../css/2016_style/img/icon-large.png"
 
